[gd_scene load_steps=4 format=3 uid="uid://b01wjb1gwp6uy"]

[ext_resource type="Script" path="res://scripts/ui/screens/GodSpecializationScreen.gd" id="1_spec_screen"]

[sub_resource type="Gradient" id="Gradient_bg"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.08, 0.06, 0.12, 1, 0.12, 0.1, 0.18, 1, 0.06, 0.04, 0.1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="GodSpecializationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spec_screen")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")
expand_mode = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 650.0
offset_right = 97.0
offset_bottom = 690.0
text = "‚Üê Back"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "GOD SPECIALIZATIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="PanelHeader" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Select God"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="GodList" type="VBoxContainer" parent="MainContainer/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="TreePanel" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderVBox" type="VBoxContainer" parent="MainContainer/CenterPanel/TreePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TreeHeaderLabel" type="Label" parent="MainContainer/CenterPanel/TreePanel/HeaderVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Select a god to view specializations"
horizontal_alignment = 1

[node name="TreeScrollContainer" type="ScrollContainer" parent="MainContainer/CenterPanel/TreePanel/HeaderVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="DetailsPanel" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DetailsVBox" type="VBoxContainer" parent="MainContainer/RightPanel/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="DetailsPanelHeader" type="Label" parent="MainContainer/RightPanel/DetailsPanel/DetailsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Specialization Details"
horizontal_alignment = 1

[node name="DetailsContent" type="ScrollContainer" parent="MainContainer/RightPanel/DetailsPanel/DetailsVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="NoSelectionLabel" type="Label" parent="MainContainer/RightPanel/DetailsPanel/DetailsVBox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "Select a specialization to view details"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnlockButton" type="Button" parent="MainContainer/RightPanel/DetailsPanel/DetailsVBox"]
visible = false
layout_mode = 2
text = "Unlock Specialization"
